added searchByName, SearchByTypeName function to filter pokemons